# ai-garden

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONSOLIDATING-whisper-v2.md  PLAN-BookSearch-2025-03-25.md  Pipfile  README-legacy.md  README.md  WHISPER-MIGRATION.md  gpt4all.pyNOT  main.py
LocalAI/: README.md
agents/: MCP.md  README.md  RESEARCH-claude-opus-4.5.md  RESEARCH-question.md
audio-deno-match/: .gitignore  REAMDE.md  align.ts  deno.jsonc  dom.ts  dom_test.ts  epub.ts  match.ts  module.ts  module_test.ts  vtt.ts  vtt_test.ts
audio-reader/: App.jsx  README.md  index_old.html  package.json
audio-reader-html/: .gitignore  App.jsx  README.md  audio.html  audio2.html  bar.html  index.html  index_old.html  setAdjustedVH.js  vh.html
audio-reader-nextjs/: README.md  package.json  pnpm-lock.yaml
audio-reader-vite/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
book-reader/: README.md
bun-one/: .prettierignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  package.json  tsconfig.json
chapter-marks-match/: README.md  TODO.md  eslint.config.mjs  package.json  tsconfig.json  validate-chapters.sh  validate-chapters.ts
clawdbot/: README.md
deno-one/: .gitignore  README.md  deno.json  deno.jsonc  main.ts
eleven-audio/: README.md
epub-split/: .gitignore  FINDINGS-epub-ts-2026-06-14.md  PLAN-compare-meta-2025-04-19.md  PLAN-epub-ts-2026-06-14.md  PLAN-parsing-validation-2025-05-02.md  PLAN-ts-migration-2025-04-18.md  PLAN.md  PROMPT-compare.md  README.md  coco.md  denoJupy.ipynb  index.mjs  index.ts  package.json  playwrightMaxSize.ts  pnpm-lock.yaml
epub-validate/: FINDINGS-epub-validate-2026-06-24.md  PLAN-epub-validate-refactor-2026-06-23.md  README.md
experiments/: AGENTS.md  BUN_TANSTACK.md  ELIXIR.md  MARKDOWN.md  README.md  STYLING.md  WORKSPACE.md
gpt4all-node-openai-api/: README.md  index.mjs  package.json
gpt4all-openai/: index.mjs  package.json
gpt4all-pyclient/: README.md  main.py  pyproject.toml
hello/: README.md  package.json
highlight-cfi/: examples.css  highlights.html
ink-cli/: index.tsx  (+3 more)
llamaIndex-client/: Justfile  README.md  epub.py  llama-local-test.py  main.py  pyproject.toml
local-open-interpreter/: Justfile  README.md  main.py  pyproject.toml
workshop-5/: .gitignore  README.md  main.py  pyproject.toml
(+7978 files in other folders)
