[tool.poetry]
name = "gpt4all-pyclient"
version = "0.1.0"
description = "GPT4all - python bindings"
authors = ["Daniel Lauzon <daniel.lauzon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gpt4all = "^1.0.11"
bs4 = "^0.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
